# TTKnowledgeBase

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  refactorings.md
.github/: FUNDING.yml
app/: astro.config.mjs  package-lock.json  package.json  tsconfig.json
config/: knowledge-bases.yaml  processors.yaml  project.yaml
docs/: asr-audio-boundary-verification-2026-07-21.md  concept-navigation-audit-2026-07-21.md  content-quotation-audit-2026-07-15.md  daily-pipeline-automation-review-2026-07-16.md  experimental-media-asr-route-plan-2026-07-21.md  legal-review-youtube-2026-07-15.md  lessons-learned.md  moment-boundary-analysis-study-2026-07-16.md  moment-boundary-gold-set-table-tennis-2026-07-16.md  moment-boundary-report-table-tennis-2026-07-16.md  operations.md  pipeline.md  prioritized-backlog-2026-07-15.md  project-content-review-2026-07-14-23.md  project-review-2026-07-15-11.md  project-review-2026-07-16-00.md  quality-report-table-tennis.json  quality-report-table-tennis.md  refactorings.md  source-video-progress.md  toc-automation-review.md  youtube-knowledge-base-plan.md  youtube-knowledge-project-precedents-2026-07-15.md
processors/: __init__.py  benchmark.py  boundaries.py  cli.py  codex_engine.py  demo.py  evidence_summaries.py  ingest.py  llm_budget.py  models.py  pipeline.py  progress.py  review_diagnostics.py  utils.py  workspace.py
prompts/: concept-extraction.md
schemas/: README.md
scripts/: processor-monitor.mjs  run-cp.py  run-daily-processing.ps1  verify-release.ps1
tests/: test_benchmark.py  test_boundaries.py  (+8 more)
(+592 files in other folders)
